Image size in messages was too big, fixed

--- a/app/assets/stylesheets/default/theme.css.scss
+++ b/app/assets/stylesheets/default/theme.css.scss
@@ -505,6 +505,10 @@ p.user_name {
   margin-left: 5px;
 }
 
+.message img {
+    max-width: 100%;
+}
+
 .avatar {
   width: 100%;
   text-align: center;
